Files app: Fix Quickview audio player background in dark mode
Bug: b/245854340
Tests: browser_tests --gtest_filter="QuickView*"
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4135181
Commit-Queue: Alex Danilo <adanilo@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1089567}

--- a/ash/webui/file_manager/untrusted_resources/files_audio_content.css
+++ b/ash/webui/file_manager/untrusted_resources/files_audio_content.css
@@ -51,3 +51,13 @@ audio::-webkit-media-controls-play-button:focus {
   outline: 1px solid rgba(66, 133, 244, 0.5);
   outline-offset: -1px;
 }
+
+/* TODO(files-app-dark-mode): figure out what background color should be
+ * used here. */
+@media (prefers-color-scheme: dark) {
+  html,
+  body,
+  audio {
+    background-color: black;
+  }
+}
